[package]
name = "raytracing"
version = "0.1.0"
authors = ["ivfranco <ivfranco33@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
derive_more = "0.99.13"
image = { version = "^0.23", default_features = false, features = ["png"] }
indicatif = "0.15.0"
rand = "0.8.3"
rayon = "1.5.0"
thiserror = "1.0.24"
